<resources>
    <string name="app_name">Mobile Course</string>
    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="itmo">ITMO University</string>
    <string name="switch_text">Switch</string>
    <string name="hide_list">Hide list</string>
    <string name="toast">Toast</string>
    <string name="edit_text_default">Name</string>
    <string name="book_download">Download</string>
    <!-- Activity task1 detail screen -->
    <string name="collatz">Col</string>
    <string name="fibonacci">Fib</string>
    <string name="natural">Nat</string>
    <string name="profile_description">TextkldsfklsdjfssdjlfkdsfkView</string>
    <string name="profile_title">Some Title</string>
    <!-- Activity task2 detail screen -->
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="continue_str">Continue</string>
    <string name="reset">Reset</string>
    <!-- Common -->
    <string name="zero" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
</resources>